# wiedunflow

./: .env.example  .gitignore  .gitmodules  .license-header.txt  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  tutorial.config.yaml.example
.ai/: implementation-plan.md  mvp-codeguide.md  mvp-wiedunflow.md  prd-planning-summary.md  prd.md  tech-stack.md  ux-spec.md
.claude/skills/codeguide-ux-skill/: SKILL.md
.claude/skills/generate-prd/: SKILL.md
.claude/skills/generate-readme/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/prd-planning/: SKILL.md
.claude/skills/summary-prd-planning/: SKILL.md
.claude/skills/wiedunflow-ux-skill/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  release-notes-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  eval_regression.yml  feature_request.yml
.github/workflows/: ci.yml  dco.yml  release.yml  visual.yml
docs/: config-precedence.md  release-notes-playbook.md  ux-validate-s5.md
docs/adr/: 0001-llm-stack-direct-sdk.md  0002-rag-bm25-mvp.md  0003-clean-architecture-layering.md  0004-uv-exclusive-toolchain.md  0005-frozen-vanilla-js-output.md  0006-ast-snapshot-schema.md  0007-planning-prompt-contract.md  0008-cache-schema-v1.md  0009-output-schema-v1.md  0010-secret-redaction-zero-telemetry.md  0011-ux-design-system.md  0012-tutorial-quality-enforcement.md  0013-tui-menu-system.md  0014-dynamic-pricing-catalog.md  0015-default-llm-provider-switch.md  0016-multi-agent-narration.md  0017-cost-reporting-wire-through.md  0018-jedi-heuristic-fallback.md  0019-brand-unification.md  0020-per-token-pricing.md  0021-cache-history-and-timeout-policy.md  0022-release-notes-format.md  0023-w4-performance-cost-batch.md
docs/rubric/: RUBRIC.md
docs/rubric/v0.1.0/: reviewer-kit.md  template.yaml
docs/security/: vulnerability-allowlist.md
reports/: codeguide-json-to-markdown.html
scripts/: __init__.py  aggregate_notice.py  aggregate_rubric.py  rerender_html.py  validate_cost_estimator.py
src/codeguide/: __init__.py  __main__.py
src/codeguide/adapters/: __init__.py  anthropic_provider.py  cached_model_catalog.py  cycle_detector.py  dynamic_import_detector.py  fake_llm_provider.py  html_external_deps_linter.py  in_memory_cache.py  jinja_renderer.py  litellm_pricing_catalog.py  openai_provider.py  pygments_highlighter.py  sqlite_cache.py  static_pricing_catalog.py  stub_bm25_store.py  stub_jedi_resolver.py  stub_ranker.py  stub_tree_sitter.py  tree_sitter_parser.py  yaml_consent_store.py
src/codeguide/cli/: __init__.py  config.py  consent.py  cost_estimator.py  cost_gate.py  editor_resolver.py  history_rotator.py  init_wizard.py  logging.py  main.py  menu.py  output.py  secret_filter.py  stage_reporter.py
src/codeguide/entities/: __init__.py  cache_entry.py  call_graph.py  code_ref.py  code_symbol.py  ingestion_result.py  lesson.py  lesson_manifest.py  run_report.py  skipped_lesson.py
src/codeguide/ingestion/: file_filter.py
src/codeguide/interfaces/: model_catalog.py  ports.py  pricing_catalog.py
src/codeguide/use_cases/: entry_point_detector.py  generate_tutorial.py  graph_diff.py  grounding_retry.py  ingestion.py  inject_source_excerpts.py  offline_linter.py  outline_builder.py  plan_lesson_manifest.py  rag_corpus.py  readme_excerpt.py  skip_trivial.py  snippet_validator.py
src/wiedunflow/: __init__.py  __main__.py
src/wiedunflow/adapters/: __init__.py  _history_compressor.py  _plan_parser.py  anthropic_model_catalog.py  anthropic_provider.py  bm25_store.py  cached_model_catalog.py  cached_pricing_catalog.py  cycle_detector.py  dynamic_import_detector.py  fake_clock.py  fake_llm_provider.py  fs_boundary.py  git_context.py  html_size_validator.py  in_memory_cache.py  jedi_resolver.py  jinja_renderer.py  litellm_pricing_catalog.py  llm_prompts.py  networkx_ranker.py  openai_model_catalog.py  openai_provider.py  pygments_highlighter.py  sqlite_cache.py  static_pricing_catalog.py  stub_jedi_resolver.py  stub_ranker.py  stub_tree_sitter.py  system_clock.py  tree_sitter_parser.py  yaml_consent_store.py
src/wiedunflow/cli/: __init__.py  config.py  consent.py  cost_estimator.py  cost_gate.py  editor_resolver.py  history_rotator.py  init_wizard.py  logging.py  main.py  menu.py  menu_banner.py  output.py  picker_sources.py  run_report_writer.py  secret_filter.py  signals.py  stage_reporter.py
src/wiedunflow/entities/: __init__.py  cache_entry.py  cache_key.py  call_graph.py  code_ref.py  code_symbol.py  corpus.py  doc_coverage.py  lesson.py  lesson_manifest.py  lesson_plan.py  ranked_graph.py  resolution_stats.py  run_report.py  skipped_lesson.py  word_count.py
src/wiedunflow/ingestion/: __init__.py  file_filter.py  secret_blocklist.py
src/wiedunflow/interfaces/: consent_store.py  model_catalog.py  ports.py  pricing_catalog.py  secret_filter.py
src/wiedunflow/renderer/: __init__.py
src/wiedunflow/use_cases/: __init__.py  agent_orchestrator.py  agent_tools.py  doc_coverage.py  errors.py  generate_tutorial.py  graph_diff.py  grounding_retry.py  ingestion.py  inject_source_excerpts.py  offline_linter.py  outline_builder.py  plan_lesson_manifest.py  rag_corpus.py  readme_excerpt.py  resume_run.py  skip_trivial.py  snippet_validator.py  spend_meter.py  workspace.py
tests/eval/: conftest.py  test_analysis_robustness.py  test_release_gate.py  test_s3_click_baseline.py  test_s5_size_budget.py
tests/eval/configs/: click.yaml  dateutil.yaml  json-to-markdown.yaml  python-sdk-mcp-anthropic.yaml  requests.yaml  (+3 more)
tests/fakes/: __init__.py  clock.py  test_clock.py
tests/integration/: conftest.py  test_analysis_pipeline.py  test_cache_incremental.py  test_config_precedence.py  test_cost_reporting_e2e.py  test_flag_enforcement.py  test_html_file_url.py  test_main_cli.py  test_planning_integration.py  test_progress_bar.py  test_sprint4_e2e.py  test_track_c_navigation.py  test_walking_skeleton.py  test_xss_pipeline.py  test_zero_telemetry.py
tests/unit/: test_aggregate_rubric.py  test_fonts_embedded.py
tests/visual/: conftest.py  test_screenshots.py
(+196 files in other folders)
