[project]
name = "codeguide"
version = "0.0.4"
description = "Generate interactive, self-contained HTML tutorials from local Git repositories"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Michał Kamiński", email = "michal.s.kaminski@gmail.com" }]
keywords = ["tutorial", "documentation", "llm", "code-analysis", "ast", "rag", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1",
    "pygments>=2.17",
    "markupsafe>=2.1",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "jedi>=0.19.2",
    "networkx>=3.3",
    "pathspec>=0.12.1",
    "structlog>=24.1",
    "anthropic>=0.40.0",
    "rank-bm25>=0.2.2",
    "tenacity>=9.0.0",
    "platformdirs>=4.3.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/Mkaminsky-dev/codeguide"
Repository = "https://github.com/Mkaminsky-dev/codeguide"
Changelog = "https://github.com/Mkaminsky-dev/codeguide/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Mkaminsky-dev/codeguide/issues"

[project.scripts]
codeguide = "codeguide.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-playwright>=0.5",
    "syrupy>=4.6",
    "mypy>=1.10",
    "ruff>=0.5.0",
    "pre-commit>=3.8",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codeguide"]

[tool.hatch.build.targets.wheel.force-include]
"src/codeguide/renderer/fonts" = "codeguide/renderer/fonts"
"src/codeguide/renderer/templates" = "codeguide/renderer/templates"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "PL", "TCH"]
ignore = [
    "PLR0913",
    "E501",
    "TC001",
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "PLR0915"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["jedi.*", "jedi"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["networkx.*", "networkx"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rank_bm25"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not eval and not eval_robustness",
]
testpaths = ["tests"]
markers = [
    "eval: end-to-end tests that call real LLM APIs (require ANTHROPIC_API_KEY, excluded from default run)",
    "eval_robustness: analysis-only robustness tests on 5 pinned OSS repos with FakeLLMProvider (opt-in, log-only)",
    "integration: walking skeleton e2e tests",
    "playwright: headless browser tests (require playwright install)",
]
